--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
             <div id="details">
               <p id="resume-name">Ishaan D. Rao</p>
               <p>Student at the University of Pennsylvania</p>
-              <p>Software Engineering Intern at SAS</p>
+              <p>Software Engineering Intern at Citadel | Citadel Securities</p>
               <p id="dots">&middot; &middot; &middot;</p>
               <div id="icons">
                 <a href="https://www.facebook.com/ishaan.rao.98" target="_blank" class="fa fa-facebook resume-icon"></a>
@@ -59,18 +59,18 @@
                 <p class="education-college">The Wharton School</p>
                 <p class="education-degree">Bachelor's of Science in Economics</p>
                 <p class="education-major"><b>Concentration: </b>Business Analytics</p>
-                <p class="education-gpa"><b>GPA: </b> 3.73/4.0</p>
-                <p class="education-gpa"><b>Honors: </b> Dean's List 2018-2019</p>
+                <p class="education-gpa"><b>GPA: </b> 3.76/4.0</p>
+                <p class="education-gpa"><b>Honors: </b> Dean's List 2018-2019, Dean's List 2019-2020</p>
                 <p class="education-coursework"><b>Relevant Coursework:</b>
                   <ul class="coursework-list">
                     <li>Applied Machine Learning</li>
                     <li>Automata, Computability, and Complexity</li>
-                    <li>Corporate Finance</li>
+                    <li>Computer Operating Systems</li>
                     <li>Data Structures and Algorithms</li>
-                    <li>Introduction to Computer Architecture</li>
+                    <li>Financial Derivatives</li>
                     <li>Linear Algebra and Differential Equations</li>
                     <li>Mathematical Foundations of Computer Science</li>
-                    <li>Managerial Economics</li>
+                    <li>Mathematical Modeling in Finance</li>
                     <li>Real Estate Investments</li>
                   </ul>
                 </p>
@@ -109,10 +109,10 @@
                 Experience
               </div>
               <div class="col-md-6">
-                <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">SAS Institute</a></p>
+                <p class="experience-company"><a href="https://www.citadel.com/" class="resume-link">Citadel | Citadel Securities</a></p>
               </div>
               <div class="col-md-3 experience-date">
-                May. 2019 - Aug. 2019
+                Jun. 2020 - Aug. 2020
               </div>
             </div>
 
@@ -123,9 +123,6 @@
                   <p class="experience-position">Software Engineering Intern</p>
                   <p class="experience-description">
                     <ul class="experience-desc-list">
-                      <li>Designed, developed, and implemented a confusion matrix visualization allowing customers to better understand the performance of their classification models on the Visual Analytics (VA) platform</li>
-                      <li>Implemented multinomial support for the logistic regression model in VA so users can predict multiclass response variables</li>
-                      <li>Resolved defects on the Visual Analytics platform relating to the decision tree, forecasting, and linear regression models</li>
                     </ul>
                   </p>
                 </div>
@@ -135,7 +132,7 @@
               <div class="col-md-3 resume-section-title">
               </div>
               <div class="col-md-6">
-                <p class="experience-company"><a href="https://www.genesys.com/" class="resume-link">University of Pennsylvania</a></p>
+                <p class="experience-company"><a href="https://www.cis.upenn.edu/~cis121/current/" class="resume-link">University of Pennsylvania</a></p>
               </div>
               <div class="col-md-3 experience-date">
                 Aug. 2018 - Present
@@ -152,6 +149,32 @@
                       <li>TA for CIS 121: Data Structures and Algorithms which covers topics such as trees, graphs, heaps, sorting, searching, etc.</li>
                       <li>Teach recitation to students once a week to review material from lecture</li>
                       <li>Hold office hours multiple times a week to help students with concepts and problem sets</li>
+                    </ul>
+                  </p>
+                </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3 resume-section-title">
+              </div>
+              <div class="col-md-6">
+                <p class="experience-company"><a href="https://www.sas.com/" class="resume-link">SAS Institute</a></p>
+              </div>
+              <div class="col-md-3 experience-date">
+                May. 2019 - Aug. 2019
+              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-8">
+                  <p class="experience-position">Software Engineering Intern</p>
+                  <p class="experience-description">
+                    <ul class="experience-desc-list">
+                      <li>Designed, developed, and implemented a confusion matrix visualization allowing customers to better understand the performance of their classification models on the Visual Analytics (VA) platform</li>
+                      <li>Implemented multinomial support for the logistic regression model in VA so users can predict multiclass response variables</li>
+                      <li>Resolved defects on the Visual Analytics platform relating to the decision tree, forecasting, and linear regression models</li>
                     </ul>
                   </p>
                 </div>
@@ -295,7 +318,7 @@
                 Skills
               </div>
               <div class="col-md-8">
-                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; Mathematica &middot; OCaml &middot; PHP &middot; Python &middot; R &middot; SAS &middot; TypeScript &middot; XML
+                <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; OCaml &middot; Python &middot; R &middot; SAS &middot; TypeScript &middot; Verilog
                 <p><b>Libraries and Frameworks: </b>Bootstrap &middot; jQuery
               </div>
             </div>
