--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-2 portfolio-item-container">
+          <div class="portfolio-item portfolio-activity">
+            <div class="front">
+              <p class="portfolio-item-name">Literature</p>
+            </div>
+            <div class="back">
+              <p class="portfolio-description">
+
+              </p>
+              <a href="http://literaturegame.com/" target="_blank" class="portfolio-url">Website</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-project">
             <div class="front">
               <p class="portfolio-item-name">NBA Hackathon</p>
@@ -174,6 +187,13 @@
             </div>
           </div>
         </div>
+        <div class="col-md-2">
+        </div>
+      </div>
+      <br>
+      <div class="row portfolio-row">
+        <div class="col-md-2">
+        </div>
         <div class="col-md-2 portfolio-item-container">
           <div class="portfolio-item portfolio-project">
             <div class="front">
@@ -189,8 +209,9 @@
         </div>
         <div class="col-md-2">
         </div>
+        <div class="col-md-2">
+        </div>
       </div>
-      <br>
     </div>
  </section>
  <section  id="contact">
