--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
                 <p class="education-college">The Wharton School</p>
                 <p class="education-degree">Bachelor's of Science in Economics</p>
                 <p class="education-major"><b>Concentration: </b>Business Analytics</p>
-                <p class="education-gpa"><b>GPA: </b> 3.76/4.0</p>
+                <p class="education-gpa"><b>GPA: </b> 3.8/4.0</p>
                 <p class="education-gpa"><b>Honors: </b> Dean's List 2018-2019, Dean's List 2019-2020</p>
                 <p class="education-coursework"><b>Relevant Coursework:</b>
                   <ul class="coursework-list">
@@ -319,7 +319,7 @@
               </div>
               <div class="col-md-8">
                 <p><b>Languages: </b>C &middot; CSS &middot; HTML &middot; Java &middot; JavaScript &middot; OCaml &middot; Python &middot; R &middot; SAS &middot; TypeScript &middot; Verilog
-                <p><b>Libraries and Frameworks: </b>Bootstrap &middot; jQuery
+                <p><b>Libraries and Frameworks: </b>Bootstrap &middot; jQuery &middot; React
               </div>
             </div>
           </div>
